<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent.Desktop" >

    <TextView style="@style/WrapContent.Text"/>
    <LinearLayout
        style="@style/MatchParent.H" 
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout style="@style/WrapContent" 
            android:orientation="vertical" android:gravity="right">

            <TextView style="@style/WrapContent.Text.Small" />


            <TextView
                android:id="@+id/old_app_password_head"
                style="@style/WrapContent.Text"
                android:text="@string/old_app_password" />
            <TextView
                android:id="@+id/app_password_info_padding"
                style="@style/WrapContent.Text.Small.Warning"
                android:padding="0dp"
                android:visibility="gone" />
            
            <TextView
                android:id="@+id/new_app_password_head"
                style="@style/WrapContent.Text"
                android:text="@string/new_app_password" />
       </LinearLayout>
        <!-- Title -->


        <!-- Input Area -->

        <LinearLayout
            android:id="@+id/old_app_password_area"
            android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="left" >

            <TextView
                android:id="@+id/authetication_title"
                style="@style/WrapContent.Text.Small"
                android:text="@string/reset_app_password_title" />

            <EditText
                android:id="@+id/old_app_password"
                style="@style/Stretch.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/app_password_info"
                style="@style/WrapContent.Text.Small.Warning"
                android:padding="0dp"
                android:text="@string/wrong_pwd"
                android:visibility="gone" />

            <EditText
                android:id="@+id/new_app_password"
                style="@style/Stretch.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <LinearLayout 
                style="@style/WrapContent"
                android:orientation="vertical">
            <Button
                android:id="@+id/ok_button"
                style="@style/WrapContent.Button" android:layout_width="match_parent"
                android:text="@android:string/ok" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/WrapContent.Button"
                android:text="@android:string/cancel" />
                
            </LinearLayout>
         </LinearLayout>
    </LinearLayout>

</FrameLayout>